--- a/contact.html
+++ b/contact.html
@@ -29,18 +29,20 @@
         <p>If you'd like to talk, share your experience, or ask something,
         feel free to send me a message. I read everything.</p>
 
-        <form class="contact-form" action="https://formspree.io/f/xwpwgrgz" method="POST">
-            <label>Your Name</label>
-            <input type="text" placeholder="Your name" class="contact-name">
+       <form class="contact-form" action="https://formspree.io/f/xwpwgrgz" method="POST">
+    <input type="hidden" name="_format" value="json" />
+    
+    <label>Your Name</label>
+    <input type="text" name="name" placeholder="Your name" class="contact-name" required>
 
-            <label>Email</label>
-            <input type="email" placeholder="your@email.com" class="contact-email">
+    <label>Email</label>
+    <input type="email" name="email" placeholder="your@email.com" class="contact-email" required>
 
-            <label>Message</label>
-            <textarea placeholder="Write your message here..." class="contact-message"></textarea>
+    <label>Message</label>
+    <textarea name="message" placeholder="Write your message here..." class="contact-message" required></textarea>
 
-            <button type="submit" class="btn-send">Send</button>
-        </form>
+    <button type="submit" class="btn-send">Send</button>
+</form>
     </main>
 
     <footer class="footer">
