--- a/poems.html
+++ b/poems.html
@@ -31,362 +31,33 @@
 
             <article class="card poem-card">
                 <div class="poem-header">
-                    <h2>Your eyes speak</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>Your eyes speak to my breath, and my soul falls into your arms.<br>
-                        What do you do with the silence?<br>
-                        You turn it into colors.<br>
-                        Your fragile sound, your wet glory,<br>
-                        lost in our madness.<br>
-                        Immortality shelters our moment.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>You come</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>You are in the rain,
-                        in the scent of a melancholic melody<br>
-                        in the corner of my obsession.
-                        Subtle, ruthless, silent.<br>
-                        You come with the storm to chase away
-                        my ghosts.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>Living fire</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p> You come,
-                        and with you comes grace,
-                        magic in unison. <br>
-                        You are a blend of nostalgia
-                        that binds itself to my flesh.
-                        A living fire that
-                        quenches my loneliness.
-                        A winged hope <br>
-                        that nears and drifts away.
-                        A constant
-                        and its paradox. </p>
-
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>Between lines</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>Read between the lines,
-                        your reflection is like mine. <br>
-                        You come from the star,
-                        as do I. <br>
-                        Winged flesh,
-                        mistress of an endless sky.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>Who are they</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>They call your name,
-                        born and gone within the spiral. <br>
-                        They slip away in an echo,
-                        pretending to be human.
-                        Reality has little time,
-                        we will embrace the fire. <br>
-                        All will stop, and all will be born again.
-                        Dead hour, candles at every door,
-                        silence will strike your conscience.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
                     <h2>No title</h2>
 
                 </div>
                 <div class="poem-content">
-                    <p>Time does not hesitate,
-                        placebo, placebo, placebo. <br>
-                        Stretch your time.
-                        Vibrate among the rubble.
-                        Escape from shame. <br>
-                        They already know where you are.</p>
-                </div>
+                    <p>We once dreamed of being two stars in our own vastness.
+                        Now I’m trapped in a desolate line of life.
+                        Day and night feel so strange without you.
 
-            </article>
+                        The innocence and the madness of the love we shared
+                        still sleep inside my eyes.
 
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>Still</h2>
+                        You were my only desire; you were that place where peace
+                        met my soul.
+                        I loved you endlessly, but you will never understand.
 
-                </div>
-                <div class="poem-content">
-                    <p>You are here,
-                        at the edge of my dreams,
-                        lying on the little hope
-                        that misfortune left behind. <br>
-                        You are here, and still I can miss you.</p>
-                </div>
+                        My impatient, anxious heart only wants to see you,
+                        and you don’t realize how deeply in love I was.
 
-            </article>
+                        Sometimes tears break open in my eyes,
+                        and desperation gets stuck in my throat.
+                        You turned your back on someone who already carried
+                        too many wounds.
 
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>They are here</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>You dont know who watches you
-                        North, South,
-                        eyes that rise from the earth,
-                        or those that belong to the wind. <br>
-                        The choice is not by chance,
-                        let the truth burn within you.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>Soft night</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>Two strangers, an electric night. <br>
-                        Wild overload,
-                        soft pause, soft arrival.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>The Weight of waiting</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>Your love,
-                        a perpetual abyss,
-                        a perpetual calm. <br>
-                        I wait for you,
-                        hidden in my sigh,
-                        hidden in my sorrow.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>I seek you</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>I seek you in the weariness of night,
-                        in the narrowness of life,
-                        in a blind epiphany. <br>
-                        I seek you in the wrinkles of time,
-                        where the belated quietly float.</p>
-                </div>
-
-            </article>
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>The last sunset</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>When I face the sunset of my existence,
-                        you will walk alone. <br>
-                        I will watch over you from the vastness,
-                        I will dance with the expansion of the void,
-                        I will gaze at you from a reverberated second. <br>
-                        You will smile and remember how happy we were.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>No title</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>I will silence what my heartbeats used to scream. <br>
-
-                        I will convince the pain to leave my throat.
-                        Your perpetual memory agonizes in my eyes. <br>
-                        In a second anguish engulfed my body. <br>
-                        In a moment you took away the truth our eyes guarded.
-                        In a moment eternity turned its back on us. <br>
-                        Subtle hypocrisy that corrodes your words.
-
-                    </p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>Wish</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>I wish all the tears
-                        would dry with the light of the night. <br>
-                        That all the ghosts
-                        Would fade with the evening breeze. <br>
-                        I wish anger would turn into memory,
-                        And calm into a new day.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>No title</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>I carry a wound
-                        on the left. <br>
-
-                        A farewell
-                        in my throat.
-
-                        A bitter word
-                        beating in my ear. <br>
-
-                        A fragment
-                        of barren hope.
-
-                        A damp sheet of paper
-                        that will never be sent.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>No title</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>What was once special
-                        Now fades in foreign lands. <br>
-
-                        I left my sorrow
-                        At the edge of a prayer. <br>
-
-                        Perhaps you can hear me
-                        When you close your eyes.
-
-                        Perhaps you wish to speak
-                        With my shadow.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>No title</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>Your eyes could make
-                        time tighten,
-                        or stretch eternity
-                        with your heartbeats. <br>
-
-                        How do I unfold illusion
-                        so it may touch your soul?
-                        How is a “forever” invoked
-                        in a liquid paradigm?. <br>
-
-                        How can one learn from seconds
-                        if your silence devours the space?</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>No title</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>I wish all the tears
-                        would dry with the light of the night. <br>
-                        That all the ghosts
-                        Would fade with the evening breeze. <br>
-                        I wish anger would turn into memory,
-                        And calm into a new day.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>No title</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>Harsh words
-                        that colonize temporality,
-                        fortuitous images
-                        that crawl within the chest. <br>
-
-                        Chaos throws a party
-                        with my name. <br>
-                        Damp seconds
-                        threaten the calm.</p>
-                </div>
-
-            </article>
-
-            <article class="card poem-card">
-                <div class="poem-header">
-                    <h2>No title</h2>
-
-                </div>
-                <div class="poem-content">
-                    <p>I have a strange soul—
-                        sometimes peace, sometimes chaos.
-                        I’m a madman no one understands,
-                        but in rejection, I find my truth. <br>
-
-                        I see myself apart from the world,
-                        I hide within my dreams.
-                        They don’t know my ending—
-                        I, too, can be beautiful. <br>
-
-                        I don’t seek a place in the crowd;
-                        solitude is my prayer.
-                        Not obsessed with winning,
-                        and accustomed to losing. <br>
-
-                        I saw my life shatter,
-                        and I bloomed among stones.
-                        I met thorns,
-                        and made them mine.</p>
+                        I guess now I’ll just be
+                        a broken, wandering star,
+                        traveling through the infinite spaces
+                        where we once lived</p>
                 </div>
 
             </article>
