--- a/poems.html
+++ b/poems.html
@@ -7,7 +7,7 @@
     <title>Poems - The Autistic Lizard</title>
     <link rel="icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css?v=3">
+    <link rel="stylesheet" href="css/styles.css?v=4">
 </head>
 
 <body>
@@ -27,50 +27,59 @@
 
     <main class="blog poems-page">
         <h1>Poem Gallery</h1>
+
         <div class="cards poems-grid">
 
+            <!-- POEMA 1 -->
             <article class="card poem-card">
-                <h2>No title</h2>
+                <h2>Your eyes speak</h2>
                 <div class="poem-content">
                     <p>We once dreamed of being two stars in our own vastness.
-                        Now I'm trapped in a desolate line of life.
-                        Day and night feel so strange without you.
+                    Now I'm trapped in a desolate line of life.
+                    Day and night feel so strange without you.
 
-                        The innocence and the madness of the love we shared
-                        still sleep inside my eyes.
+                    The innocence and the madness of the love we shared
+                    still sleep inside my eyes.
 
-                        You were my only desire; you were that place where peace
-                        met my soul.
-                        I loved you endlessly, but you will never understand.
+                    You were my only desire; you were that place where peace
+                    met my soul. I loved you endlessly, but you will never understand.
 
-                        My impatient, anxious heart only wants to see you,
-                        and you don't realize how deeply in love I was.
+                    My impatient, anxious heart only wants to see you,
+                    and you don't realize how deeply in love I was.
 
-                        Sometimes tears break open in my eyes,
-                        and desperation gets stuck in my throat.
-                        You turned your back on someone who already carried
-                        too many wounds.
+                    Sometimes tears break open in my eyes,
+                    and desperation gets stuck in my throat.
+                    You turned your back on someone who already carried
+                    too many wounds.
 
-                        I guess now I'll just be
-                        a broken, wandering star,
-                        traveling through the infinite spaces
-                        where we once lived.</p>
+                    I guess now I'll just be
+                    a broken, wandering star,
+                    traveling through the infinite spaces
+                    where we once lived.</p>
                 </div>
             </article>
 
+            <!-- POEMA 2 -->
             <article class="card poem-card">
-                <h2>No title</h2>
+                <h2>Untitled</h2>
                 <div class="poem-content">
                     <p>On my lips lives the kiss that never came to be,
-                        and in my voice a prayer for your return.
-                        I saw you sitting in my dreams, you looked like an angel—
-                        I was hallucinating, my eyes refused to part from you.
-                        My hope burns, and my heart is trapped inside the smoke.
-                        I am a forgotten shadow— where do I find fertile ground to be born again?
-                        Perhaps this is a punishment?
-                        How do I explain that your love is a flower trying to bloom in my barren fate?
-                        My heart has broken before, but without you my life lies down
-                        in a river of tears— and I don't know if I can cross it.</p>
+                    and in my voice a prayer for your return.
+
+                    I saw you sitting in my dreams, you looked like an angel—
+                    I was hallucinating, my eyes refused to part from you.
+
+                    My hope burns, and my heart is trapped inside the smoke.
+                    I am a forgotten shadow—
+                    where do I find fertile ground to be born again?
+
+                    How do I explain that your love is a flower
+                    trying to bloom in my barren fate?
+
+                    My heart has broken before,
+                    but without you my life lies down
+                    in a river of tears—
+                    and I don't know if I can cross it.</p>
                 </div>
             </article>
 
@@ -80,6 +89,6 @@
     <footer class="footer">
         © 2025 Theautisticlizard. All rights reserved.
     </footer>
-</body>
 
+</body>
 </html>
