--- a/poems.html
+++ b/poems.html
@@ -60,7 +60,7 @@
             </article>
 
             <article class="card poem-card">
-                <h2>No title</h2>
+                <h2>A shadow trying to bloom</h2>
                 <div class="poem-content">
                     <p>
                         On my lips lives the kiss that never came to be,
@@ -82,6 +82,66 @@
                         in a river of tears—
                         and I don’t know if I can cross it.
                     </p>
+                </div>
+            </article>
+
+            <article class="card poem-card">
+                <h2>Return color to my shadowed world</h2>
+                <div class="poem-content">
+                    <p>Don’t you see it, my love?
+                        You pushed my destiny into the void.
+
+                        My melancholy waits inside
+                        the box of our memories.
+
+                        Come now, silence this sadness—
+                        come now and wrap me in your skin.
+
+                        What can I tell my heart,
+                        when your absence soaks it in fear?
+
+                        Bring the colors back
+                        to my shadowed world.
+
+                        Come here—
+                        you are my only desire.</p>
+                </div>
+
+
+
+            </article>
+
+            <article class="card poem-card">
+                <h2>Broken under your absence</h2>
+                <div class="poem-content">
+                    <p>Love, why did you surrender me to loneliness?
+                        You’re not here, and my mind feels lost.
+
+                        Let me cry for you, let me miss you—
+                        what else can I do?
+                        All I gained were false promises,
+                        words already dead.
+
+                        All this anger, all this rage
+                        now camouflaged in tears…
+                        and all the love that vanished—
+                        you held the reins, my life.
+
+                        That illusion of kissing you
+                        beneath the veil and eternal fire—
+                        all of it forgotten.
+                        You take the best of me
+                        and leave me defeated.
+
+                        The memory of your gentle smile, my beloved,
+                        waits for me every night.
+                        You were only mine,
+                        I was only yours—
+                        and everything shattered.
+
+                        Distance will make you forget me,
+                        but it will wound me
+                        every single day.</p>
                 </div>
             </article>
 
