--- a/poems.html
+++ b/poems.html
@@ -145,6 +145,144 @@
                 </div>
             </article>
 
+            <article class="card poem-card">
+                <h2>You were mine until you weren´t</h2>
+                <div class="poem-content">
+                    <p>
+                        My love, you are no longer mine.
+                        What was my mistake?
+                        Neither my affection
+                        nor my time
+                        were ever enough.
+
+                        Where did our precious moments go?
+                        Pieces of my heart
+                        are scattered across my room.
+
+                        My love—
+                        my soul searches only
+                        for your name.
+                        Whisper to me again
+                        that you are mine.
+
+                        My skin refuses
+                        to wander into another’s warmth.
+                        Make me yours again.
+
+                        Do you not remember
+                        the madness that fell upon us?
+                        Do you never think
+                        of the way love used to hold us?
+
+                        Your love felt so entirely mine,
+                        and my love
+                        was so completely yours.
+                    </p>
+                </div>
+
+            </article>
+
+            <article class="card poem-card">
+                <h2>The storm you left at my door</h2>
+                <div class="poem-content">
+                    <p>Were you ever truly mine?
+                        My love, look closely—
+                        you left my soul in ruins.
+
+                        You forgot to take with you
+                        the moments you once gave me.
+                        Take everything
+                        that ever bound us together.
+
+                        I will gather, in pain,
+                        the pieces of our unfinished story.
+                        Perhaps you’ll never understand
+                        the greatness with which my eyes
+                        once looked at you.
+
+                        My love, you will never know
+                        the wounds I carried
+                        in my loneliness.
+                        Would you even have the strength
+                        to face that agony?
+
+                        If only your skin were my skin—
+                        if only you would stop
+                        and listen to me,
+                        just for a moment, my love—
+                        perhaps then you would understand
+                        the storm you left at my door.</p>
+                </div>
+            </article>
+
+            <article class="card poem-card">
+                <h2>What your silence reveals </h2>
+                <div class="poem-content">
+                    <p>Angel, how can you say so much
+                        with your silence?
+                        Did your heart hide itself
+                        behind a curtain of apathy?
+                        Or were you always this way?
+
+                        I’m left confused—
+                        your lies made me wait for you.
+                        So many promises, so many dreams…
+                        was it all truly a lie?
+
+                        Now it’s getting late,
+                        and waiting has become a poison.
+                        How do I hold on
+                        to reality?
+
+                        Perhaps time will place my words
+                        inside your eyes—
+                        perhaps my silence
+                        will make the truth speak.
+
+                        You can hide,
+                        but you will feel my absence.
+                        Somehow, somewhere,
+                        you will see my name—
+                        because my heart
+                        always feared your leaving.</p>
+                </div>
+            </article>
+
+            <article class="card poem-card">
+                <h2>We once melt for each other</h2>
+                <div class="poem-content">
+                    <p>Do you remember when we melted
+                        into each other?
+                        When our damp eyes
+                        could understand everything
+                        without a single word?
+
+                        What happened to your heart,
+                        that it no longer answers
+                        the way it used to?
+                        Does the echo of my love
+                        no longer resonate
+                        within your space?
+
+                        My whole world used to disappear
+                        into the pleasure of your voice…
+                        What happened, my love?
+                        Why does everything feel
+                        so numb now?
+
+                        My ears keep rewinding
+                        your laughter—
+                        I’m trapped day and night
+                        in your memory, my life.
+
+                        Is this the emptiness
+                        that grief leaves behind?
+                        Darling, look through your notes—
+                        you’ll find our story
+                        there again</p>
+                </div>
+            </article>
+
 
 
         </div>
