--- a/poems.html
+++ b/poems.html
@@ -283,6 +283,216 @@
                 </div>
             </article>
 
+            <article class="card poem-card">
+                <h2>The butterflies left with you</h2>
+                <div class="poem-content">
+                    <p>You let misfortune gather me
+                        into its arms once again.
+                        You forgot the tenderness
+                        with which we once looked
+                        at each other.
+
+                        I felt so lucky
+                        resting at your side—
+                        you owned everything,
+                        listen, my love,
+                        everything.
+
+                        I felt like a victor
+                        in a story doomed to fail;
+                        the victory was ours,
+                        yet you left me alone.
+
+                        My drowsy heart,
+                        so tired from missing you—
+                        can you feel it?
+
+                        My love, even the days
+                        seem dark now;
+                        the beauty of the sky
+                        has changed as well.
+
+                        From your eyes
+                        I used to gather flowers—
+                        where did you take
+                        the whole garden?
+
+                        You left,
+                        and the butterflies left with you.
+                        You stretched time
+                        until our paths split apart.
+
+                        I remained on the ground
+                        while you looked down at me
+                        from above.
+                        Are we truly so different?
+                        Our moments
+                        whispered something else to me.</p>
+                </div>
+            </article>
+
+            <article class="card poem-card">
+                <h2></h2>
+                <div class="poem-content">
+                    <p>Rain falls into my eyes
+                        in slow motion.
+                        I never wanted
+                        to say goodbye.
+
+                        You even took with you
+                        the deepest words
+                        I could never say aloud.
+
+                        I am the lonely one
+                        who opened his whole world
+                        to you—
+                        because you were
+                        the only one.
+
+                        My heartbeat understands
+                        only the language
+                        of your love;
+                        every fiber of my being
+                        hungers for it.
+
+                        My lips, thirsty for yours—
+                        I want to intoxicate myself
+                        one more time.
+
+                        Your face echoes
+                        around me, everywhere.
+                        What have you done,
+                        my love?
+
+                        Break this spell—
+                        please, break it now.
+                        I will become an empty leaf
+                        wandering with your memory.
+
+                        Your beautiful eyes
+                        brushed against mine;
+                        even at a distance
+                        we somehow found each other
+                        so close.
+
+                        Was it all a dream?
+                        Was it all a lie?
+
+                        Make me believe otherwise,
+                        my love.
+                        Take me back
+                        to that special moment
+                        where love awoke.</p>
+                </div>
+            </article>
+
+            <article class="card poem-card">
+                <h2>What made you let me fall</h2>
+                <div class="poem-content">
+                    <p>Rage is truly
+                        a dishonest place—
+                        why did you let it
+                        end like this?
+
+                        My clumsy heart
+                        cannot forget you;
+                        it shattered badly
+                        the moment you walked away.
+
+                        You held me in your hands,
+                        then let me fall.
+                        I crashed harshly
+                        against reality,
+                        losing my sanity
+                        for you, my love.
+
+                        Our moments now
+                        are a grave—
+                        everything dried up,
+                        everything stopped.
+
+                        I held you so close
+                        to my desires,
+                        yet not close enough
+                        to make you stay.
+
+                        I keep waiting…
+                        I keep dreaming
+                        of breathing your skin.
+
+                        Perhaps you’ll never
+                        understand my love—
+                        I fought the world
+                        for you.
+
+                        Now I am only a ghost,
+                        wandering through
+                        your streets.
+
+                        Inside my chest
+                        your name is nailed—
+                        the name only you and I
+                        once whispered.
+
+                        Was your fragrance
+                        ever mine?
+                        My soul still searches
+                        for your presence.</p>
+                </div>
+            </article>
+
+            <article class="card poem-card">
+                <h2>Let me bow before you one last time</h2>
+                <div class="poem-content">
+                    <p>Come, my love—
+                        tonight I will bow before you.
+
+                        I remained inside myself
+                        for far too long;
+                        listen to my prayers
+                        for your return.
+
+                        Take me to a place
+                        where guilt does not exist,
+                        where loneliness
+                        is not so heavy.
+
+                        I search for you everywhere,
+                        my love—
+                        let me find you again.
+
+                        This distance
+                        not only hurts—
+                        it changes everything,
+                        my love.
+
+                        Do my eyes
+                        not haunt your dreams?
+                        Does the distance
+                        not burn your chest
+                        the way it burns mine?
+
+                        I can smell
+                        the chaos inside me—
+                        let me breathe
+                        your essence again.
+
+                        Do not let your smile
+                        fade from my memory.
+                        Do not torment me
+                        with the ruin
+                        your goodbye left behind.
+
+                        Has hope abandoned
+                        our worlds?
+                        Have the shadows
+                        truly not left us?
+
+                        Tonight,
+                        I will bow before you.</p>
+                </div>
+            </article>
+
 
 
         </div>
