Fix duplicate content

--- a/poems.html
+++ b/poems.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://theautisticlizard.in/poems.html" />
     <title>Poems – The Autistic Lizard</title>
     <style>
   /* Prevenir FOUC - ocultar contenido hasta que CSS cargue */
